[package]
name = "chrono"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies] 
async-std = {version = "1", features = ["attributes"] }
futures = "0.3"
wasm-bindgen = "0.2"
wee_alloc = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"
bytes = "1"