[package]
name = "chrono"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies] 
async-std = {version = "1", features = ["attributes", "unstable"] }
futures = "0.3"
wasm-bindgen = "0.2"
wee_alloc = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"
bytes = "1"
js-sys = "0.3"

[profile.release]
# Optimize for size
opt-level = "s"  # or "z" for even smaller binaries

# Generate more compact debug information
debug = false

# Link time optimization
lto = true

# Panic strategy (omit if you need to catch panics)
panic = 'abort'

# Codegen units (set to 1 for the most aggressive optimizations)
codegen-units = 1